# APL-VIO

./: .gitignore  README.md
analysis/: CMakeLists.txt  package.xml
analysis/launch/: analysis.launch
analysis/scripts/: drawBoxplot.py  drawBoxplot2_stereo.py  drawBoxplot_mono.py  drawBoxplot_stereo.py
aplvio/: CMakeLists.txt  package.xml
aplvio/include/estimator/: customType.h  estimator.h  paramPool.h  parameters.h
aplvio/include/factor/: imuFactor.h  integrationBase.h  lineLocalParameterization.h  marginalizationFactor.h  poseLocalParameterization.h  projectionLineFactor.h  projectionOneFrameTwoCamFactor.h  projectionTwoFrameOneCamFactor.h  projectionTwoFrameTwoCamFactor.h
aplvio/include/inertial/: imuProcessor.h
aplvio/include/initializer/: initializer.h
aplvio/include/odom_utils/: geometry_utils.h  math_utils.h  utils.h
aplvio/include/rosMaster/: cameraMarker.h  rosMaster.h
aplvio/include/visual/: featureManager.h  featureTracker.h  featureTrackerBase.h  imageProcessor.h  lineFeatureManager.h  lineFeatureTrackerBase.h  lineFeatureTracker_DDM.h  lineFeatureTracker_LOFT.h  lineOpticalFlowTracker.h
aplvio/include/visual/line_descriptor/: CMakeLists.txt
aplvio/include/visual/line_descriptor/include/: line_descriptor.hpp
aplvio/include/visual/line_descriptor/include/line_descriptor/: descriptor.hpp
aplvio/include/visual/line_descriptor/src/: LSDDetector.cpp  binary_descriptor.cpp  binary_descriptor_matcher.cpp  bitops.hpp  draw.cpp  precomp.hpp
aplvio/launch/real/: car.launch  drone.launch  euroc.launch  kaist.launch  kitti.launch  realsense_d435i.launch  realsense_d455.launch  tumvi.launch
aplvio/launch/sim/: drone_sim.launch  realsense_d435i_sim.launch
aplvio/settings/: catkin_settings.h  catkin_settings.h.in
aplvio/src/: aplvio_kitti_node.cpp  aplvio_ros_node.cpp
aplvio/src/estimator/: customType.cpp  estimator.cpp  paramPool.cpp  parameters.cpp
aplvio/src/factor/: imuFactor.cpp  integrationBase.cpp  marginalizationFactor.cpp  projectionLineFactor.cpp  projectionOneFrameTwoCamFactor.cpp  projectionTwoFrameOneCamFactor.cpp  projectionTwoFrameTwoCamFactor.cpp
aplvio/src/inertial/: imuProcessor.cpp
aplvio/src/initializer/: initializer.cpp
aplvio/src/rosMaster/: cameraMarker.cpp  rosMaster.cpp
aplvio/src/visual/: featureManager.cpp  featureTracker.cpp  imageProcessor.cpp  lineFeatureManager.cpp  lineFeatureTracker_DDM.cpp  lineFeatureTracker_LOFT.cpp  lineOpticalFlowTracker.cpp
benchmark/: CMakeLists.txt  package.xml
benchmark/datasets/tumvi/: dataset-corridor1_512_16.txt  dataset-corridor2_512_16.txt  dataset-corridor3_512_16.txt  dataset-corridor4_512_16.txt  dataset-corridor5_512_16.txt  dataset-magistrale1_512_16.txt  dataset-magistrale2_512_16.txt  dataset-magistrale3_512_16.txt  dataset-magistrale4_512_16.txt  dataset-magistrale5_512_16.txt  dataset-magistrale6_512_16.txt
benchmark/include/benchmark/: parameters.h  rosMaster.h
benchmark/launch/: benchmark.launch
benchmark/src/: benchmark_publisher.cpp  parameters.cpp  rosMaster.cpp
camera_model/: CMakeLists.txt  package.xml
config/rviz/: rviz_aplvio_config.rviz  rviz_aplvio_config_white.rviz
loop_fusion/: CMakeLists.txt  package.xml
loop_fusion/src/: pose_graph.cpp  pose_graph_node.cpp
(+314 files in other folders)
